# next_rust_todo_app

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  compose.yaml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20251230_create_todos_table.sql
backend/src/: config.rs  main.rs  routes.rs
backend/src/db/: mod.rs
backend/src/handlers/: mod.rs  todos.rs
backend/src/models/: mod.rs  todo.rs
backend/src/modules/: logging.rs
